[tool.poetry]
name = "nonebot-plugin-imgsearch"
version = "0.1.2"
description = "A image search plugin for nonebot2"
authors = ["bakashigure <bakashigure@hotmail.com>"]
readme="README.md"
license="MIT"
repository = "https://github.com/bakashigure/nonebot_plugin_imgsearch"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.7.3"
beautifulsoup4 = "^4.9.1"
loguru = "^0.5.1"
httpx = { version = ">=0.20.0, <1.0.0", extras = ["http2"] }

[tool.isort]
line_length = 80
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = "typing_extensions"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"